# jax-flash-attn2

./: .gitignore  README.md  pyproject.toml
benchmarks/triton-vs-jax-sdpa-cudnn/: README.md  b=1-ub=False-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=1-ub=False-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=1-ub=False-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=1-ub=False-hdim=256-qh=32-kvh=16-mode=fwd.csv  b=1-ub=False-hdim=64-qh=16-kvh=8-mode=fwd.csv  b=1-ub=False-hdim=64-qh=32-kvh=16-mode=fwd.csv  b=1-ub=True-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=1-ub=True-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=1-ub=True-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=1-ub=True-hdim=256-qh=32-kvh=16-mode=fwd.csv  b=1-ub=True-hdim=64-qh=16-kvh=8-mode=fwd.csv  b=1-ub=True-hdim=64-qh=32-kvh=16-mode=fwd.csv  b=2-ub=False-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=2-ub=False-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=2-ub=False-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=2-ub=False-hdim=256-qh=32-kvh=16-mode=fwd.csv  b=2-ub=False-hdim=64-qh=16-kvh=8-mode=fwd.csv  b=2-ub=False-hdim=64-qh=32-kvh=16-mode=fwd.csv  b=2-ub=True-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=2-ub=True-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=2-ub=True-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=2-ub=True-hdim=256-qh=32-kvh=16-mode=fwd.csv  b=2-ub=True-hdim=64-qh=16-kvh=8-mode=fwd.csv  b=2-ub=True-hdim=64-qh=32-kvh=16-mode=fwd.csv  b=4-ub=False-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=4-ub=False-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=4-ub=False-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=4-ub=False-hdim=256-qh=32-kvh=16-mode=fwd.csv  b=4-ub=False-hdim=64-qh=16-kvh=8-mode=fwd.csv  b=4-ub=False-hdim=64-qh=32-kvh=16-mode=fwd.csv  b=4-ub=True-hdim=128-qh=16-kvh=8-mode=fwd.csv  b=4-ub=True-hdim=128-qh=32-kvh=16-mode=fwd.csv  b=4-ub=True-hdim=256-qh=16-kvh=8-mode=fwd.csv  b=4-ub=True-hdim=256-qh=32-kvh=16-mode=fwd.csv  results.html  (+2 more)
jax_flash_attn2/: __init__.py  flash_attention.py
tests/: benchmark_gqa_triton.py  benchmark_gqa_triton_jax_cudnn.py  benchmark_mha_triton.py  test_triton.py
(+253 files in other folders)
